# aurmr_simox_script

./: .gitignore  CMakeLists.txt  Jenkinsfile  bin_reach.csv  bin_reach_over_volume.csv  readme.md  test.txt
SimoxQtUtility/: CMakeLists.txt  qwt.h
SimoxQtUtility/qwt/: SimoxQwtColorMap.cpp  SimoxQwtColorMap.h  SimoxQwtSpectrogramData.cpp  SimoxQwtSpectrogramData.h
SimoxUtility/: CMakeLists.txt  EigenStdVector.h  SimoxUtility.cpp  SimoxUtility.h  algorithm.h  backport.h  caching.h  color.h  eigen.h  error.h  filesystem.h  iterator.h  json.h  math.h  meta.h  preprocessor.h  rapidxml.h  shapes.h  simox.h  tests.h  threads.h  xml.h
SimoxUtility/algorithm/: advanced.h  apply.hpp  contains.h  for_each_if.h  fuzzy_find.h  get_map_keys_values.h  minmax.h  ordered_circular_buffer.h  string.h  vector.hpp
SimoxUtility/backport/: span.h
SimoxUtility/caching/: CacheMap.cpp  CacheMap.h
SimoxUtility/color/: Color.cpp  Color.h  ColorMap.cpp  ColorMap.h  GlasbeyLUT.cpp  GlasbeyLUT.h  KellyLUT.h  cmaps.h  color.cpp  color.h  colormaps.cpp  colormaps.h  convert_byte_float.hpp  hsv.cpp  hsv.h  interpolation.cpp  interpolation.h  json.cpp  json.h
SimoxUtility/eigen/: AssertAsException.h  EigenStdVector.h  OrientedBox.h  XYConstrainedOrientedBox.h
SimoxUtility/error/: SimoxError.cpp  SimoxError.h
SimoxUtility/filesystem/: list_directory.cpp  list_directory.h  make_relative.h  remove_trailing_separator.h
SimoxUtility/iterator/: nested_range_iterator.h  xy_index_range_iterator.h
SimoxUtility/json/: converters.cpp  converters.h  eigen_conversion.cpp  eigen_conversion.h  error.cpp  error.h  io.cpp  io.h  json.h  json.hpp  util.cpp  util.h
SimoxUtility/math/: SoftMinMax.cpp  SoftMinMax.h  compare.h  convert.h  distance.h  is_finite.h  isfinite.h  mean.h  norm.h  normal.h  periodic.h  periodic_clamp.h  pose.h  pose_ops.h  project_to_plane.h  regression.h  rescale.h  scale_value.h  similarity.h  statistics.h  sum.h  vector_similarity.h  zero.h
SimoxUtility/meta/: EnumNames.hpp  boost_hana.h  eigen.h  enum.h  key_type.h  template_traits.h  type_name.cpp  type_name.h  type_traits.h  undefined_t.h
SimoxUtility/preprocessor/: drop_front.h  variadic_for_each.h
SimoxUtility/shapes/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CircleBase.h  OrientedBox.h  OrientedBoxBase.h  OrientedEllipsisBase.h  XYConstrainedOrientedBox.h  json_conversions.cpp  json_conversions.h
SimoxUtility/simox/: SimoxPath.cpp  SimoxPath.h
SimoxUtility/tests/: CMakeLists.txt  ConverterTest.cpp  DeltaAngleTest.cpp  ForEachIf.cpp  JsonEigenConversionTest.cpp  JsonIOTest.cpp  MathPoseTest.cpp  OrientedBoxTest.cpp  XYConstrainedOrientedBoxTest.cpp  filesystem_list_directory_test.cpp  math_pose_invert_test.cpp  math_pose_ops_invert_test.cpp  math_pose_ops_orthogonalize_test.cpp  math_pose_orthogonalize_test.cpp  math_pose_pose_test.cpp  shapes.h
SimoxUtility/threads/: CountingSemaphore.cpp  CountingSemaphore.h  system_thread_id.cpp  system_thread_id.h
SimoxUtility/xml/: rapidxml.h
VirtualRobot/: AbstractFactoryMethod.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  GraspableSensorizedObject.cpp  GraspableSensorizedObject.h  LinkedCoordinate.cpp  LinkedCoordinate.h  ManipulationObject.cpp  ManipulationObject.h  MathTools.cpp  MathTools.h  Obstacle.cpp  Obstacle.h  Primitive.cpp  Primitive.h  Robot.cpp  Robot.h  RobotConfig.cpp  RobotConfig.h  RobotFactory.cpp  RobotFactory.h  RobotNodeSet.cpp  RobotNodeSet.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  Safety.cpp  Safety.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectSet.cpp  SceneObjectSet.h  SphereApproximator.cpp  Trajectory.cpp  Trajectory.h  Units.h  VirtualRobot.cpp  VirtualRobot.h  (+5 more)
VirtualRobot/CollisionDetection/: CDManager.cpp  CDManager.h  CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.h  CollisionCheckerImplementation.h  CollisionModel.cpp  CollisionModel.h  CollisionModelImplementation.h
VirtualRobot/Compression/: CompressionBZip2.cpp  CompressionBZip2.h  CompressionRLE.cpp  CompressionRLE.h
VirtualRobot/Controller/: CartesianPositionController.cpp  CartesianPositionController.h  CartesianVelocityController.cpp  CartesianVelocityController.h
VirtualRobot/DataStructures/: nanoflann.hpp
VirtualRobot/Dynamics/: Dynamics.cpp  Dynamics.h
VirtualRobot/EndEffector/: EndEffector.cpp  EndEffector.h  EndEffectorActor.cpp  EndEffectorActor.h
VirtualRobot/Grasping/: BasicGraspQualityMeasure.cpp  BasicGraspQualityMeasure.h  ChainedGrasp.cpp  ChainedGrasp.h  Grasp.cpp  Grasp.h  GraspSet.cpp  GraspSet.h
VirtualRobot/IK/: AdvancedIKSolver.cpp  AdvancedIKSolver.h  CoMIK.cpp  CoMIK.h  ConstrainedHierarchicalIK.h  ConstrainedIK.cpp  ConstrainedIK.h  ConstrainedOptimizationIK.cpp  ConstrainedOptimizationIK.h  ConstrainedStackedIK.h  Constraint.cpp  Constraint.h  DifferentialIK.cpp  DifferentialIK.h  FeetPosture.cpp  FeetPosture.h  GazeIK.cpp  GazeIK.h  GenericIKSolver.cpp  GenericIKSolver.h  HierarchicalIK.cpp  HierarchicalIK.h  HierarchicalIKSolver.cpp  HierarchicalIKSolver.h  IKSolver.h  JacobiProvider.cpp  JacobiProvider.h  JointLimitAvoidanceJacobi.cpp  JointLimitAvoidanceJacobi.h  PoseQualityExtendedManipulability.cpp  PoseQualityExtendedManipulability.h  PoseQualityManipulability.cpp  PoseQualityMeasurement.cpp  RobotPoseDifferentialIK.cpp  RobotPoseDifferentialIK.h  StackedIK.cpp  StackedIK.h  SupportPolygon.cpp  SupportPolygon.h
VirtualRobot/Import/: RobotImporterFactory.cpp  RobotImporterFactory.h  SimoxCOLLADAFactory.cpp  SimoxCOLLADAFactory.h  SimoxXMLFactory.cpp  SimoxXMLFactory.h
VirtualRobot/MJCF/: Document.cpp  Document.h  elements.h
VirtualRobot/Manipulability/: AbstractManipulability.cpp  AbstractManipulability.h  AbstractManipulabilityTracking.cpp  AbstractManipulabilityTracking.h  BimanualManipulability.cpp  BimanualManipulability.h  BimanualManipulabilityTracking.cpp  BimanualManipulabilityTracking.h  SingleChainManipulability.cpp  SingleChainManipulability.h  SingleChainManipulabilityTracking.cpp  SingleChainManipulabilityTracking.h
VirtualRobot/Nodes/: CameraSensor.cpp  CameraSensor.h  (+40 more)
(+1030 files in other folders)
